Updating the use of ORM for remaining